[gd_scene load_steps=3 format=3 uid="uid://dfb6tyyife6l2"]

[ext_resource type="Script" path="res://scripts/ui/reputation_goal_popup.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.95, 0.95, 0.95, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="ReputationGoalPopup" type="Control"]
process_mode = 2
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupPanel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "새로운 스테이지!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/PopupPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GoalLabel" type="Label" parent="CenterContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "이번 스테이지의 목표:"
horizontal_alignment = 1

[node name="ReputationGoalLabel" type="Label" parent="CenterContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 36
text = "평판 5 달성하기"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConfirmButton" type="Button" parent="CenterContainer/PopupPanel/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "확인"

[connection signal="pressed" from="CenterContainer/PopupPanel/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
